# wgc2

./: .gitignore  .prospector.yaml  Cargo.toml  README.md  check_rest_api.py  pyproject.toml  redeploy.sh
conf/: wgc2.service
doc/: openapi.yaml  wgc2
ref/: kv_example.rs
ref/wg_controller_go-master/: LICENSE  go.mod
ref/wg_utils-master/: .gitignore  README.md  TODO.md
ref/wg_utils-master/src/: peer_logic.rs
ref/wg_utils-master/static/: rapidoc.html
ref/wg_utils-master/static/spec/: openapi.yaml
ref/wg_utils-master/templates/: interface.conf.jn2
refs/wg-mgmt-main/: README.md  requirements.txt  wg_config.template.yaml  wgm.py
refs/wg_controller_go-master/: Makefile  README.md  config.toml  go.sum  wg_controller.go
refs/wg_utils-master/: Cargo.toml  config.toml  rustfmt.toml  scratch.md
refs/wg_utils-master/reference/: kv_msgpack_ex.rs
refs/wg_utils-master/src/: defines.rs  gen_logic.rs  gen_route_handlers.rs  interface_logic.rs  interface_route_handlers.rs  main.rs  peer_route_handlers.rs  utils.rs
refs/wg_utils-master/static/: index.html  swagger_client.html
refs/wg_utils-master/templates/: base.html.jn2  peer.conf.jn2
refs/wgmu-master/: Cargo.toml
refs/wgmu-master/src/: main.rs
rust/src/: main.rs  wg_schema.rs
src/: common.rs  iproute2_support.rs  main.rs  multi_error.rs  utils.rs  wg_endpoints.rs  wg_schema.rs  wg_support.rs
test/: requirements.txt  test_harness.py  test_schema.py  test_settings.py
