[package]
name = "wg_controller"
version = "0.1.0"
authors = ["cyrex562 <cyrex562@gmail.com>"]
edition = "2018"

[[bin]]
name = "wg_controller"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-session = "0.3.0"
actix-utils = "1.0.6"
log = "0.4.8"
fern = "0.6.0"
serde = {  version = "1.0.114", features = ["derive", "std", ]}
serde_json = "1.0.55"
tera = "1.3.1"
clap = "2.33.1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
chrono = "0.4.11"
toml = "0.5.6"
kv = { version = "0.20.2", features = ["json-value", "msgpack-value"]}